--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
       In class conditional image generation, we can generate class-conditional samples using an unconditional diffusion model with a pretrained ViT classifier
     </p>
     <figure>
-      <img src="imagenet.png" alt="ImageNet class conditional generation" width=""/>
+      <img src="imagenet.png" alt="ImageNet class conditional generation" width="80%"/>
       <figcaption>
         Generated samples after inference-time scaling on ImageNet, with class 222 "kuvasz" 
     </figcaption>
