--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 </div>
 
     <p>
-      In class conditional image generation, we can generate class-conditional samples using an unconditional diffusion model with a pretrained ViT classifier
+      In class conditional image generation, we can generate class-conditional samples using an unconditional diffusion model with a pretrained ViT classifier as verifier.
     </p>
     <figure>
       <img src="imagenet.png" alt="ImageNet class conditional generation" width="80%"/>
