--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         search the generative space of diffusion models for high quality samples.
       </p>
       <figure>
-        <img src="teaser.png" alt="Illustration of our search framework"  width=""/>
+        <img src="teaser.png" alt="Illustration of our search framework" />
         <figcaption>Illustration of our search framework. </figcaption>
       </figure>
       <p>
@@ -68,7 +68,7 @@
         breadth-first search (BFS) and depth-first search (DFS) to explore the space efficiently.
       </p>
        <figure>
-        <img src="treesearch.png" alt="Search tree for sampling" width=""/>
+        <img src="treesearch.png" alt="Search tree for sampling" />
         <figcaption>Illustration of global tree search methods</figcaption>
       </figure>
       <p>
@@ -88,7 +88,7 @@
           <figcaption>Plan for PointMaze Giant</figcaption>
         </figure>
         <figure>
-          <img src="maze_ultra.png" alt="maze_ultra" />
+          <img src="maze_ultra.png" alt="maze_ultra"/>
           <figcaption>Plan for PointMaze Ultra</figcaption>
         </figure>
       </div>
@@ -148,7 +148,7 @@
       In class conditional image generation, we can generate class-conditional samples using an unconditional diffusion model with a pretrained ViT classifier as verifier.
     </p>
     <figure>
-      <img src="imagenet.png" alt="ImageNet class conditional generation" width="80%"/>
+      <img src="imagenet.png" alt="ImageNet class conditional generation"/>
       <figcaption>
         Generated samples after inference-time scaling on ImageNet, with class 222 "kuvasz" 
     </figcaption>
