--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
       text-align: left;
     }
     .table-wrapper {
+      max-width: 700px;
+      margin: 0 auto;
       overflow-x: auto;
     }
 
