--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <p>We conduct extensive experiments on various tasks, including long horizon maze planning, offline RL and image generation</p>
         <h3>Maze Planning</h3>
         We show that with inference-scaling, diffusion models can succeed in long horizon planning in complex maze environments.
-        <div class="fig-row">
+        <div class="fig-row" style="align-items: flex-start;">
           <figure>
             <img src="maze_giant.png" alt="maze_giant"/>
             <figcaption>Plan for PointMaze Giant</figcaption>
