--- a/index.html
+++ b/index.html
@@ -101,11 +101,11 @@
         <div class="fig-row" style="align-items: flex-start;">
           <figure>
             <img src="maze_giant.png" alt="maze_giant"/>
-            <figcaption>Plan for PointMaze Giant</figcaption>
+            <figcaption>Generated plan for PointMaze Giant</figcaption>
           </figure>
           <figure>
             <img src="maze_ultra.png" alt="maze_ultra"/>
-            <figcaption>Plan for PointMaze Ultra</figcaption>
+            <figcaption>Generated plan for PointMaze Ultra</figcaption>
           </figure>
         </div>
         <h3>Offline RL</h3>
@@ -158,7 +158,7 @@
       </figure>
       <figure>
         <img src="t2i2.png" alt="correct sample with inference scaling" />
-        <figcaption>Generated sample with inference scaling. The number of bottles follows the prompt "eight bottles"</figcaption>
+        <figcaption>Generated sample with inference scaling using UniDet. The number of bottles follows the prompt "eight bottles"</figcaption>
       </figure>
     </div>
 
