--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
       </figure>
       <figure>
         <img src="t2i2.png" alt="correct sample with inference scaling" />
-        <figcaption>Generated sample with inference scaling using UniDet. The number of bottles follows the prompt "eight bottles"</figcaption>
+        <figcaption>Generated sample with inference scaling using UniDet as verifier. The number of bottles follows the prompt "eight bottles"</figcaption>
       </figure>
     </div>
 
