--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
         <span>James Zou</span>
         <span>Jianzhu Ma</span>
         <span>Yitao Liang</span>
-        <span>Yilun Du<sup>†</sup></span>
+        <span>Yilun Du</span>
       </div>
       <div class="correspondence">
-        <sup>†</sup> Corresponding author: Yilun Du. Contact: <a href="mailto:ydu@seas.harvard.edu">ydu@seas.harvard.edu</a>
+        Corresponding author: Yilun Du. Contact: <a href="mailto:ydu@seas.harvard.edu">ydu@seas.harvard.edu</a>
       </div>
     </header>
     <div class="content">
