--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
     </header>
     <div class="content">
       <section>
+        <h2>Abstract</h2>
         <p>Starting from the foundamental principles from classical search methods, such as hill climbing and graph search, we propose a 
           principled and general framework for inference-time scaling of diffusion models through search. Our framework consists of the following components:
           <ul>
@@ -96,13 +97,42 @@
         <p>To explore diverse modes in the multimodal distribution induced by diffusion models, we view the sampling process as a search tree, and use classical search methods such as 
           breadth-first search (BFS) and depth-first search (DFS) to explore the space efficiently.
         </p>
+         <p>
+          This fomulation encompasses other search methods as instances or combinations of BFS and DFS, and through our extensive experiments, we demonstrate the superior efficiency and adaptivity of our search framework compared to existing methods.
+        </p>
          <figure>
           <img src="treesearch.png" alt="Search tree for sampling" />
           <figcaption>Illustration of global tree search methods</figcaption>
         </figure>
+        <h3>Best-of-N</h3>
         <p>
-          This fomulation encompasses other search methods as instances or combinations of BFS and DFS, and through our extensive experiments, we demonstrate the superior efficiency and adaptivity of our search framework compared to existing methods.
+          As a baseline in global search, in <strong>Best-of-N</strong>, we sample N samples from the diffusion model in paralle,
+          and select the best sample according to the verifier score \(f(\mathbf{x})\). 
+          This method is simple and effective, but it does not utilize information from intermediate states, thus being inefficient.
         </p>
+        <h3>BFS</h3>
+        <p>
+          In BFS, similar to best-first search where we use a heuristic to evaluate intermediate states, 
+          we dynamically allocate compute to intermediate particles \(\mathbf{x}_t\) at certain time step \(t\) based on their verifier scores \(f(\mathbf{x}_{0|t})\). 
+        </p>
+        <p>
+          In <strong>BFS-Resampling</strong>, we sample \(n_t^k\) children for particle \(\mathbf{x}_t^k\) at time step \(t\) propotional to the verifier score:
+          $$ n_t^k =  \texttt{Round} \left(N_t\frac{f(\mathbf{x}_{0|t}^k)}{\sum_{j=1}^{N_t} f(\mathbf{x}_{0|t}^j)} \right) $$
+          where \(N_t\) is the number of particles at time step \(t\).
+        </p>
+        <p>
+          In <strong>BFS-Pruning</strong>, when using determinstic ODE-solvers as samplers, sampling more than one particle results in duplication. 
+          We then prune the particles with:
+          $$n_t^k = \min\left(1, \texttt{Round} \left(N_t\frac{f(\mathbf{x}_{0|t}^k)}{\sum_{j=1}^{N_t} f(\mathbf{x}_{0|t}^j)} \right) \right)$$
+          so we sample at most one particle for each parent particle \(\mathbf{x}_t^k\).
+        </p>
+        <h3>DFS</h3>
+        In <strong>DFS</strong>, we only denoise one particle, and we set a threshold \(\delta_t\) for the verifier score. 
+        When the verifier score estimate falls below the threshold:
+        $$ f(\mathbf{x}_{0|t}^k) < \delta_t $$
+        we <strong>backtrack</strong> by adding noise to a previous noise level:
+        $$ t_{\text{next}}=t+\Delta,~~~\mathbf{x}_{t_{\text{next}}} = q\left(\mathbf{x}_{t_{\text{next}}}|\mathbf{x}_{t}\right)$$
+        where \(\Delta\) is the backtrack step size, and \(q\) is the forward diffusion process.
         
       </section>
 
@@ -110,7 +140,11 @@
         <h2>Experiments</h2>
         <p>We conduct extensive experiments on various tasks, including long horizon maze planning, offline RL and image generation</p>
         <h3>Maze Planning</h3>
-        We show that with inference-scaling, diffusion models can succeed in long horizon planning in complex maze environments.
+        <p>
+        We show that with inference-scaling, diffusion models can succeed in long horizon planning in complex maze environments. 
+        We use the verifier to measure the collision of particles in the generated trajectory with the maze wall blocks:
+        $$f(\mathbf{\tau})=\sum_{i=1}^H\texttt{check_collision}\left(\text{point}_i\right)\texttt{distance}\left(\text{point}_i\,,~ \text{maze walls}\right)$$
+        </p>
         <div class="fig-row" style="align-items: flex-start;">
           <figure>
             <img src="maze_giant.png" alt="maze_giant"/>
@@ -122,7 +156,16 @@
           </figure>
         </div>
         <h3>Offline RL</h3>
-        We use a pretrained diffusion model and a pretrained Q-function as verifier for offline RL. Our training-free method can achieve comparable performance to the state-of-the-art training-required methods.
+        <p>
+        We use a pretrained diffusion model and a pretrained Q-function as verifier for offline RL. 
+        We formulate offline RL as sampling from the Q-weighted distribution:
+        $$ \tilde{\pi}(\mathbf{a}_0|\mathbf{s}) \propto \pi(\mathbf{a}_0|\mathbf{s}) \exp\left(\lambda Q(\mathbf{a}_0,\mathbf{s})\right) $$
+        where \(\pi\) is the pretrained diffusion model, and \(Q\) is the pretrained Q-function. 
+        </p>
+        <p>
+        We evaluate our method on D4RL locomotion tasks. 
+        Our training-free method can achieve comparable performance to the state-of-the-art training-required methods.
+        </p>
         <div class="table-wrapper">
           <table border="1" cellpadding="8" cellspacing="0" style="border-collapse: collapse; width: 100%; font-family: sans-serif;">
     <caption style="caption-side: top; font-weight: bold; text-align: left; padding: 10px 0;">
@@ -162,8 +205,12 @@
       We evaluate our method on compositional text-to-image generation on <a href="https://github.com/Karine-Huang/T2I-CompBench">CompBench</a>, and class conditional ImageNet generation using an unconditional diffusion model with a pretrained classifier.
     </p>
     <p>
-      In compositional test-to-image, we show that inference-time search against a pretrained visual verifier such as <a href="https://github.com/xingyizhou/UniDet">UniDet</a> and <a href="https://github.com/salesforce/BLIP">BLIP</a> can generate images with complex compositional prompts. Below show the results of prompt "eight bottles" with and without inference scaling.
-       After inference scaling the number of bottles in the generated image follows the prompt, while without inference scaling the number of bottles is not consistent with the prompt.
+      In compositional test-to-image, we show that inference-time search against a pretrained visual verifier such as <a href="https://github.com/xingyizhou/UniDet">UniDet</a> and <a href="https://github.com/salesforce/BLIP">BLIP</a> can generate images with complex compositional prompts. 
+    </p>
+    <p>
+      Below show the results of prompt "eight bottles" with and without inference scaling, which requires the model to generate the correct number of objects.
+      We use a <strong>UniDet Model</strong> to count the number of objects in the generated image.
+      After inference scaling the number of bottles in the generated image follows the prompt, while without inference scaling the number of bottles is not consistent with the prompt.
     </p>
     <div class="fig-row">
       <figure>
@@ -177,8 +224,9 @@
     </div>
 
       <p>
-        In class-conditional image generation, we generate samples aligned with a target class label using an unconditional diffusion model guided by a pretrained ViT classifier as a verifier.
-Below, we show the uncurated samples for class 222 (“kuvasz”) on ImageNet, demonstrating diverse samples that accurately reflect the class label.
+        In class-conditional image generation, we generate samples aligned with a target class label using an <strong>unconditional diffusion model</strong> guided by a pretrained ViT <strong>classifier</strong> as a verifier.
+        $$\tilde{p}_0(\mathbf{x}_0) \propto p_0(\mathbf{x}_0) p\left(c|\mathbf{x}_0\right)$$
+        Below, we show the uncurated samples for class 222 (“kuvasz”) on ImageNet, demonstrating diverse samples that accurately reflect the class label.
       </p>
       <figure>
         <img src="imagenet.png" alt="ImageNet class conditional generation", width="60%"/>
