--- a/index.html
+++ b/index.html
@@ -95,10 +95,12 @@
       <section>
         <h2>Global Search</h2>
         <p>To explore diverse modes in the multimodal distribution induced by diffusion models, we view the sampling process as a search tree, and use classical search methods such as 
-          breadth-first search (BFS) and depth-first search (DFS) to explore the space efficiently.
+          breadth-first search (<strong>BFS</strong>) and depth-first search (<strong>DFS</strong>) to explore the space efficiently.
         </p>
          <p>
-          This fomulation encompasses other search methods as instances or combinations of BFS and DFS, and through our extensive experiments, we demonstrate the superior efficiency and adaptivity of our search framework compared to existing methods.
+          This fomulation encompasses other search methods as <strong>instances or combinations of BFS and DFS</strong>, 
+          and through our extensive experiments, 
+          we demonstrate the superior efficiency and adaptivity of our search framework compared to existing methods.
         </p>
          <figure>
           <img src="treesearch.png" alt="Search tree for sampling" />
