--- a/index.html
+++ b/index.html
@@ -126,14 +126,14 @@
           In <strong>BFS-Pruning</strong>, when using determinstic ODE-solvers as samplers, sampling more than one particle results in duplication. 
           We then prune the particles with:
           $$n_t^k = \min\left(1, \texttt{Round} \left(N_t\frac{f(\mathbf{x}_{0|t}^k)}{\sum_{j=1}^{N_t} f(\mathbf{x}_{0|t}^j)} \right) \right)$$
-          so we sample at most one particle for each parent particle \(\mathbf{x}_t^k\).
+          so we sample at most one children for each parent particle \(\mathbf{x}_t^k\).
         </p>
         <h3>DFS</h3>
-        In <strong>DFS</strong>, we only denoise one particle, and we set a threshold \(\delta_t\) for the verifier score. 
+        In <strong>DFS</strong>, we only denoise one particle, and set a threshold \(\delta_t\) for the verifier score. 
         When the verifier score estimate falls below the threshold:
         $$ f(\mathbf{x}_{0|t}^k) < \delta_t $$
-        we <strong>backtrack</strong> by adding noise to a previous noise level:
-        $$ t_{\text{next}}=t+\Delta,~~~\mathbf{x}_{t_{\text{next}}} = q\left(\mathbf{x}_{t_{\text{next}}}|\mathbf{x}_{t}\right)$$
+        we <strong>backtrack</strong> by adding noise to a higher noise level:
+        $$ t_{\text{next}}=t+\Delta,~~~\mathbf{x}_{t_{\text{next}}} = x_t + \sqrt{\sigma_{t_{\text{next}}}^2-\sigma_t^2}\mathbf{z}\,,~~~\mathbf{z}\sim\mathcal{N}(\mathbf{0},\mathbf{I})$$
         where \(\Delta\) is the backtrack step size, and \(q\) is the forward diffusion process.
         
       </section>
@@ -144,8 +144,9 @@
         <h3>Maze Planning</h3>
         <p>
         We show that with inference-scaling, diffusion models can succeed in long horizon planning in complex maze environments. 
-        We use the verifier to measure the collision of particles in the generated trajectory with the maze wall blocks:
-        $$f(\mathbf{\tau})=\sum_{i=1}^H\texttt{check_collision}\left(\text{point}_i\right)\texttt{distance}\left(\text{point}_i\,,~ \text{maze walls}\right)$$
+        We  define the verifier loss as the collision of particles in the generated trajectory with the maze wall blocks:
+        $$L(\mathbf{\tau})=\sum_{i=1}^H\texttt{check_collision}\left(\text{point}_i\right)\texttt{distance}\left(\text{point}_i\,,~ \text{maze walls}\right)$$
+        so we minimize the violation of the trajectory with inference-scaling.
         </p>
         <div class="fig-row" style="align-items: flex-start;">
           <figure>
