--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         <h3>DFS</h3>
         In <strong>DFS</strong>, we only denoise one particle, and set a threshold \(\delta_t\) for the verifier score. 
         When the verifier score estimate falls below the threshold:
-        $$ f(\mathbf{x}_{0|t}^k) < \delta_t $$
+        $$ f(\mathbf{x}_{0|t}) < \delta_t $$
         we <strong>backtrack</strong> by adding noise to a higher noise level:
         $$ t_{\text{next}}=t+\Delta,~~~\mathbf{x}_{t_{\text{next}}} = x_t + \sqrt{\sigma_{t_{\text{next}}}^2-\sigma_t^2}\mathbf{z}\,,~~~\mathbf{z}\sim\mathcal{N}(\mathbf{0},\mathbf{I})$$
         where \(\Delta\) is the backtrack step size, and \(q\) is the forward diffusion process.
