--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         When the verifier score estimate falls below the threshold:
         $$ f(\mathbf{x}_{0|t}) < \delta_t $$
         we <strong>backtrack</strong> by adding noise to a higher noise level:
-        $$ t_{\text{next}}=t+\Delta,~~~\mathbf{x}_{t_{\text{next}}} = x_t + \sqrt{\sigma_{t_{\text{next}}}^2-\sigma_t^2}\mathbf{z}\,,~~~\mathbf{z}\sim\mathcal{N}(\mathbf{0},\mathbf{I})$$
+        $$ t_{\text{next}}=t+\Delta,~~~\mathbf{x}_{t_{\text{next}}} = \mathbf{x}_t + \sqrt{\sigma_{t_{\text{next}}}^2-\sigma_t^2}\mathbf{z}\,,~~~\mathbf{z}\sim\mathcal{N}(\mathbf{0},\mathbf{I})$$
         where \(\Delta\) is the backtrack step size, and \(q\) is the forward diffusion process.
         
       </section>
