--- a/index.html
+++ b/index.html
@@ -277,12 +277,12 @@
     </p>
     <div class="fig-row">
       <figure>
-        <img src="t2i_curve1.png" alt="wrong sample without inference scaling" />
-        <figcaption>Generated sample without inference scaling. The number of bottles does not follow the prompt "eight bottles"</figcaption>
+        <img src="t2i_curve1.png" alt="scaling dfs attr" />
+        <figcaption>Scaling curve of DFS in attribute binding task</figcaption>
       </figure>
       <figure>
-        <img src="t2i_curve2.png" alt="correct sample with inference scaling" />
-        <figcaption>Generated sample with inference scaling using UniDet. The number of bottles follows the prompt "eight bottles"</figcaption>
+        <img src="t2i_curve2.png" alt="scaling dfs obj" />
+        <figcaption>Scaling curve of DFS in object relationship task</figcaption>
       </figure>
     </div>
 
@@ -302,12 +302,12 @@
       </p>
       <div class="fig-row">
       <figure>
-        <img src="imagenet_fid.png" alt="wrong sample without inference scaling" />
-        <figcaption>Generated sample without inference scaling. The number of bottles does not follow the prompt "eight bottles"</figcaption>
+        <img src="imagenet_fid.png" alt="scaling curve fid" />
+        <figcaption>Scaling curve of BFS under FID metric</figcaption>
       </figure>
       <figure>
-        <img src="imagenet_acc.png" alt="correct sample with inference scaling" />
-        <figcaption>Generated sample with inference scaling using UniDet. The number of bottles follows the prompt "eight bottles"</figcaption>
+        <img src="imagenet_acc.png" alt="scaling curve acc" />
+        <figcaption>Scaling curve of BFS under class accuracy metric</figcaption>
       </figure>
     </div>
 
