--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           search the generative space of diffusion models for high quality samples.
         </p>
         <div style="display: flex; justify-content: center;">
-          <video controls loop muted style="width: 60%; max-width: 600px; margin: 20px auto; align-items: center;">
+          <video controls loop muted style="width: 60%; max-width: 600px; margin: 20px auto; align-items: center;" poster="teser-video.png">
             <source src="teser-video.mp4" type="video/mp4">
           </video>
         </div>
@@ -98,7 +98,7 @@
           which can be seen as conducting hill-climbing, following the gradient flow of the KL divergence between \(\tilde{q}_t\) and the distribution of current sample \(\mathbf{x}_t\).
         </p>
         <div style="display: flex; justify-content: center;">
-          <video controls loop muted style="width: 60%; max-width: 600px; margin: 20px auto; align-items: center;">
+          <video controls loop muted style="width: 60%; max-width: 600px; margin: 20px auto; align-items: center;" poster="local_search_video.png">
             <source src="local_search_video.mp4" type="video/mp4">
           </video>
         </div>
@@ -136,7 +136,7 @@
           where \(N_t\) is the number of particles at time step \(t\).
         </p>
         <div style="display: flex; justify-content: center;">
-          <video controls loop muted style="width: 60%; max-width: 600px; margin: 20px auto; align-items: center;">
+          <video controls loop muted style="width: 50%; max-width: 600px; margin: 20px auto; align-items: center;" poster="BFS-resample-video.png">
             <source src="BFS-resample-video.mp4" type="video/mp4">
           </video>
         </div>
@@ -147,7 +147,7 @@
           so we sample at most one children for each parent particle \(\mathbf{x}_t^k\), gradually removing bad samples.
         </p>
         <div style="display: flex; justify-content: center;">
-          <video controls loop muted style="width: 60%; max-width: 600px; margin: 20px auto; align-items: center;">
+          <video controls loop muted style="width: 50%; max-width: 600px; margin: 20px auto; align-items: center;" poster="BFS-pruning-video.png">
             <source src="BFS-pruning-video.mp4" type="video/mp4">
           </video>
         </div>
@@ -161,7 +161,7 @@
         where \(\Delta\) is the backtrack step size.
         </p>
         <div style="display: flex; justify-content: center;">
-          <video controls loop muted style="width: 60%; max-width: 600px; margin: 20px auto; align-items: center;">
+          <video controls loop muted style="width: 50%; max-width: 600px; margin: 20px auto; align-items: center;" poster="DFS-video.png">
             <source src="DFS-video.mp4" type="video/mp4">
           </video>
         </div>
