--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
         </svg>
         GitHub
       </a>
+      <a href="https://arxiv.org/abs/2505.23614" target="_blank" class="github-btn" style="display: inline-flex; align-items: center; gap: 8px; margin: 18px 0 0 10px; text-decoration: none; background: #e64a4a; color: white; padding: 6px 12px; border-radius: 5px; font-size: 1em;">
+        <img src="arxiv-logomark-small.svg" alt="arXiv" style="width: 26px; height: 20px; display: inline-block; vertical-align: middle;" />
+        arXiv
+      </a>
       <div class="author-list">
         <span>Xiangcheng Zhang<sup>1</sup></span>
         <span>Haowei Lin<sup>1</sup></span>
@@ -323,11 +327,14 @@
         <div style="position: relative; margin-bottom: 2em;">
           <button id="copy-bibtex" style="position: absolute; top: 10px; right: 10px; padding: 4px 10px; font-size: 0.95em; cursor: pointer;">Copy</button>
           <pre id="bibtex-entry" style="padding-top: 2.5em; background: #f9f9f9; border-radius: 4px; font-size: 0.98em; overflow-x: auto;">
-@inproceedings{your2024diffusionscaling,
-  title={Inference-Time Scaling of Diffusion Models through Classical Search},
-  author={Xiangcheng Zhang and Haowei Lin and Haotian Ye and James Zou and Jianzhu Ma and Yitao Liang and Yilun Du},
-  booktitle={Conference on Example AI Research},
-  year={2024}
+@misc{zhang2025inferencetimescalingdiffusionmodels,
+      title={Inference-time Scaling of Diffusion Models through Classical Search}, 
+      author={Xiangcheng Zhang and Haowei Lin and Haotian Ye and James Zou and Jianzhu Ma and Yitao Liang and Yilun Du},
+      year={2025},
+      eprint={2505.23614},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG},
+      url={https://arxiv.org/abs/2505.23614}, 
 }
           </pre>
         </div>
